# showcase-LangDiaryAgentic

./: .dockerignore  .env_base  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
lang_diary_agentic/: configs.py  db_handler.py  graph.py  llm_custom_api_wrapper.py  logging_configs.py  module_fetch_data_viewer.py  static.py  vector_store.py
lang_diary_agentic/clients/: __init__.py  base.py  client_huggingface_model.py  client_ollama.py
lang_diary_agentic/models/: generation_records.py  vector_store_entry.py
lang_diary_agentic/module_post_edit/: __init__.py  version_control.py
lang_diary_agentic/utils/: check_language.py
my_diary_app/: app.py
my_diary_app/templates/: details.html  diary_details.html  diary_editor.html  diary_viewer.html  index.html  vocabulary_viewer.html
my_diary_app/ui/: data_input_viewer.py  data_viewer.py
scripts_eval/: test_prompt.py
servers/: server.py
tests/: test_graph.py  test_module_fetch_data_viewer.py
ui/: data_input_viewer.py  main.py
