[project]
name = "lang_diary_agentic"
version = "0.1"
description = ""
authors = [{ name = "Kensuke-Mitsuzawa", email = "kensuke.mit@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "accelerate>=1.12.0",
    "chromadb==0.4.24",
    "duckdb>=1.4.3",
    "fastapi>=0.128.0",
    "flask>=3.1.2",
    "langchain==0.1.12",
    "langchain-chroma>=0.1.4",
    "langchain-community==0.0.28",
    "langchain-google-genai>=1.0.4",
    "langchain-huggingface>=0.0.3",
    "langchain-openai>=0.1.7",
    "langdetect>=1.0.9",
    "langgraph==0.0.26",
    "lingua-language-detector>=2.1.1",
    "pycountry>=24.6.1",
    "pydantic-settings>=2.12.0",
    "python-dotenv==1.0.1",
    "streamlit==1.32.0",
    "uvicorn[standard]>=0.40.0",
]

[tool.uv]

[tool.uv.sources]

[tool.hatch.build.targets.sdist]
include = ["lang_diary_agentic"]

[tool.hatch.build.targets.wheel]
include = ["lang_diary_agentic"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-xdist>=3.8.0",
]
test = [
    "pytest (>=8.4.2,<9.0.0)"
]
